--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -19,19 +19,54 @@
     }
    },
    "source": [
-    "**Instructor:** Ryan Learn <br\\>\n",
-    "\n",
-    "<br\\>\n",
-    "**email:** rjl09c@my.fsu.edu    <br\\>\n",
-    "\n",
-    "**office:** 492H <br\\>\n",
-    "\n",
+    "**Instructor:** Ryan Learn <br\\>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**email:** rjl09c@my.fsu.edu    <br\\>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**office:** 492H <br\\>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "**Office Hours:**  TR 12:00-2:00pm or by Appointment<br\\>\n",
     "\n",
-    "**Lecture Time: **  MTWTR 11:00am-12:00pm <br\\>\n",
+    "**Lecture Time:**  MTWTR 11:00am-12:00pm <br\\>\n",
     "\n",
-    "**Lab Time: ** M 1:45-4:15pm <br\\>\n",
-    "\n",
+    "**Lab Time: ** M 1:45-4:15pm <br\\>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "**Prerequisites:** Calculus I + II or Instructor Permission<br\\>"
    ]
   },
@@ -55,13 +90,40 @@
     }
    },
    "source": [
-    "Blackboard <br\\>\n",
-    "\n",
-    "Slack <br\\>\n",
-    "\n",
-    "Jupyter Notebooks <br\\>\n",
-    "\n",
-    "Skype <br\\>"
+    "Blackboard <br\\>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Slack "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Jupyter Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Skype"
    ]
   },
   {
@@ -74,9 +136,12 @@
    "source": [
     "# Blackboard <br\\>\n",
     "\n",
+    "\n",
     "Assignments will be posted, submitted and graded via Blackboard <br\\>\n",
     "\n",
+    "\n",
     "Syllabus is posted here <br\\>\n",
+    "\n",
     "\n",
     "Links to presentations will be placed on here as well"
    ]
