--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -106,10 +106,10 @@
     "Assignments will be posted, submitted and graded via Blackboard <br\\>\n",
     "\n",
     "\n",
-    "Syllabus is posted here <br\\>\n",
+    "Syllabus/Course info <br\\>\n",
     "\n",
     "\n",
-    "Links to presentations will be placed on here as well"
+    "Links to presentations <br\\>"
    ]
   },
   {
@@ -168,6 +168,48 @@
     "Jupyter notebooks allow integrated markdown/coding. Makes writing up your assignments a breeze. <br\\>\n",
     "\n",
     "It can be installed here:  http://jupyter.org/ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Jupyter Notebook Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x3f02fd0>]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pylab\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.linspace(0, 20, 1000)  # 100 evenly-spaced values from 0 to 50\n",
+    "y = np.sin(x)\n",
+    "\n",
+    "pylab.plot(x, y)"
    ]
   },
   {
