--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -221,13 +221,206 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Course Policies\n",
+    "\n",
+    "Attendance. \n",
+    "\n",
+    "Assignments.\n",
+    "\n",
+    "Grading. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Attendance \n",
+    "\n",
+    "Not mandatory but strongly encouraged. \n",
+    "\n",
+    "Can be done on skype. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Assignments\n",
+    "\n",
+    "6 Labs, 6 Homeworks. 1 Midterm. 1 Project\n",
+    "\n",
+    "Homeworks/Labs are to be turned in as a Jupyter notebook .AND. a PDF, in a zip file LastNameHomeworkX or LastNameLabX. \n",
+    "\n",
+    "Upload them to blackboard. Do not email them to me.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do not email me your assignments\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Do not email me your assignments\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Assignments\n",
+    "\n",
+    "Do not email me your assignments. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Grading \n",
+    "\n",
+    "Final Project - 20%  Homework - 35%  Midterm - 15%  Labs - 30%\n",
+    "\n",
+    "\n",
+    "A = 90-100, B = 80-89, C = 70-79, D = 60-69\n",
+    "\n",
+    "Will use + and - grades as appropriate. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Late Policy\n",
+    "\n",
+    "Homework and Labs can be turned in late as per the sylabus (20% off after 24 hrs late, 50% off after the later of me grading the assignment or a week). \n",
+    "\n",
+    "Barring documented exigent circumstances, final project can't be turned it late. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Course Content\n",
+    "\n",
+    "• Part I - Introduction to Algorithm Design and Analysis <br\\>\n",
+    "\n",
+    "• Part II - Random Processes <br\\>\n",
+    "\n",
+    "• Part III - Graph Theory <br\\>\n",
+    "\n",
+    "• Part IV - Data Mining <br\\>\n",
+    "\n",
+    "• Part V - Clustering <br\\>\n",
+    "\n",
+    "• Part VI - Optimization <br\\>\n",
+    "\n",
+    "• Part VII - Feature Extraction and Pattern Recognition<br\\>\n",
+    "\n",
+    "• Part VIII - Computational Geometry <br\\>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Boiler Plate\n",
+    "\n",
+    "**Honor Code:** The Florida State University Academic Honor Policy outlines the Universitys\n",
+    "expectations for the integrity of students academic work, the procedures for resolving\n",
+    "alleged violations of those expectations, and the rights and responsibilities of students and\n",
+    "faculty members throughout the process. Students are responsible for reading the Academic\n",
+    "Honor Policy and for living up to their pledge to be honest and truthful andt o\n",
+    "strive for personal and institutional integrity at Florida State University. (Florida State\n",
+    "University Academic Honor Policy, found at http://dof.fsu.edu/honorpolicy.htm.)\n",
+    "\n",
+    "\n",
+    "**ADA:** Students with disabilities needing academic accommodation should:\n",
+    "1. Register with and provide documentation to the Student Disability Resource Center;\n",
+    "and\n",
+    "2. Bring a letter to the instructor indicating the need for accommodation and what type.\n",
+    "This should be done during the first week of class. This syllabus and other class\n",
+    "materials are available in alternative format upon request. For more information\n",
+    "about services available to FSU students with disabilities, contact the:\n",
+    "\n",
+    "\n",
+    "Student Disability Resource Center<br\\>\n",
+    "97 Woodward Avenue, South <br\\>\n",
+    "108 Student Services Building <br\\>\n",
+    "Florida State University <br\\>\n",
+    "Tallahassee, FL 32306-4167 <br\\>\n",
+    "(850) 644-9566 (voice) <br\\>\n",
+    "(850) 644-8504 (TDD) <br\\>\n",
+    "sdrc@admin.fsu.edu <br\\> \n",
+    "http://www.disabilitycenter.fsu.edu/ <br\\>\n",
+    "\n",
+    "\n",
+    "**Syllabus Change Policy:** Except for changes that substantially affect implementation\n",
+    "of the evaluation (grading) statement, this syllabus is a guide for the course and is subject\n",
+    "to change with advance notice.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Onward onto Algorithm Design and Analysis"
+   ]
   }
  ],
  "metadata": {
