--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -1144,13 +1144,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"http://i.imgur.com/3bBDXUS.png\" width=\"500\" heigth=\"500\" \\>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1205,7 +1208,44 @@
     "The exhaustive enumeration approach. \n",
     "\n",
     "Very quick to code. \n",
-    "\n"
+    "\n",
+    "### Example: Greatest Common factor calculator\n",
+    "\n",
+    "For two integers, m and n, calculate their greatest common factor. \n",
+    "\n",
+    "``` \n",
+    "t = min(m,n)\n",
+    "while (gcf == 0)\n",
+    "    if (m % t == 0)\n",
+    "        if (n % t == 0)\n",
+    "            gcf = t\n",
+    "    t = t - 1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example for m = 16, n = 36\n",
+    "\n",
+    "1. t = min(16,36) = 16 \n",
+    " * 16 % t == 0, 36 % t != 0 \n",
+    "2. t = 15\n",
+    " * 16 % t != 0\n",
+    "3. t = 14\n",
+    " * 16 % t != 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "* t = 4\n",
+    " * 16 % t == 0, 36 % t == 0\n",
+    " * Stop, gcf = 4 "
    ]
   },
   {
