Update and Finalized

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2062,6 +2062,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Divide and Conquer: Binary search\n",
+    "\n",
+    "Suppose you have an array of length $n$ and you want to search for an entry $x$. The brute force method you have implemented before is the sequential approach, where you check all entries 1 through $n$ until you find the desired entry $x$ or exhaust the array. This is $\\mathcal{O}(n)$\n",
+    "\n",
+    "If the list is sorted however, you can take advantage of this fact and implement the binary search algorithm. \n",
+    "\n",
+    "If you have many searches to do in an unsorted array, it can be advantageous to sort it. \n",
+    "\n",
+    "THe binary search algorithm is a discrete analog to the bisection method for root-finding. \n",
+    "\n",
+    "Suppose we have the same array a as above, but in this case we know for a fact it is sorted in ascending order.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Divide and Conquer: Binary search tree\n",
+    "\n",
+    "* First, check if $x > a(n)$ or $x <a(1)$. If either of these are true, you know automatically that $x$ is missing from your array. \n",
+    "\n",
+    "Then \n",
+    "\n",
+    "```\n",
+    "ileft = 1\n",
+    "iright = n\n",
+    "    while(notFound):\n",
+    "        midpoint = (ileft + iright)/2\n",
+    "        if (x > a[midpoint]):\n",
+    "            ileft = midpoint\n",
+    "        elif (x < a[midpoint]):\n",
+    "            iright = midpoint\n",
+    "        elif (x == a[midpoint])\n",
+    "            notFound = false\n",
+    "            return midpoint\n",
+    "```\n",
+    "Anything missing from the above pseudocode?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Binary search example\n",
+    "\n",
+    "Using binary search to search the array $a$ for $x$, $x=17$. \n",
+    "\n",
+    "$$ a = [5,9,12,17,21,45,81,109,122] $$\n",
+    "\n",
+    "* Set i_L = 1, i_R = 9\n",
+    " * Calculate midpoint as 5\n",
+    " * 17 < a[5] (21), so i_R = 5\n",
+    "* i_L = 1, i_R = 5\n",
+    " * Calculate midpoint as 3\n",
+    " * 17 > a[3] (12) so i_L = 3\n",
+    "* i_L = 3, i_R = 5\n",
+    " * Calculate midpoint as 4\n",
+    " * 17 = a[4], return 4\n",
+    " \n",
+    "Doubling the size of the array only increases the number of operations needed to search the array by one. \n",
+    "\n",
+    "For what sort of function, $f(x)$ does the following hold. \n",
+    "\n",
+    "If $f(x) = W$ then $f(2x) = W+1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "$$\\log_2(2x) = \\log_2(x)+1$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
