--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2031,11 +2031,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Divide and Conquer: Matrix multipication\n",
     "\n",
-    "Multiplying two matrices, $A$ and $B$ involves taking the dot product of each row of $A$ with each $column$ B. Dotting the first row of $A$ with every column in $B$ involves $n^2$ multiplications and $n(n-1)$ additions. As there are $n$ rows of A, this must be done $n$ times, so the method is $\\mathcal{O}(n^3)$\n",
+    "Multiplying two matrices, $A$ and $B$ involves taking the dot product of each row of $A$ with each column $B$. Dotting the first row of $A$ with every column in $B$ involves $n^2$ multiplications and $n(n-1)$ additions. As there are $n$ rows of A, this must be done $n$ times, so the method is $\\mathcal{O}(n^3)$\n",
     "\n",
     "Algorithms have been invented that are less than $\\mathcal{O}(n^3)$. Similar to large integer multiplication, decrease and conquer strategies allow you to do (marginally) better. The Strassen Matrix multiplication algorthim uses a series of intermediate products to compute the matrix product in $\\mathcal{O}(n^2.8)$. It has been further modified to be done in. $\\mathcal{O}(n^2.376)$. \n",
     "\n",
