--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -89,7 +89,7 @@
     }
    },
    "source": [
-    "<img src=\"http://i.imgur.com/95yBVp0.png\" width=\"500\" height=\"500\" />\n"
+    "<img src=\"http://i.imgur.com/3xT7G9q.jpg\" width=\"500\" height=\"500\" />\n"
    ]
   },
   {
