--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2060,7 +2060,6 @@
    },
    "source": [
     "# Strassen Matrix algorithm\n",
-    "http://i.imgur.com/Q06F0mh.png\n",
     "\n",
     "<img src=\"http://i.imgur.com/Q06F0mh.png\" width=\"500\" heigth=\"500\" \\>\n"
    ]
@@ -2159,13 +2158,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Transform and Conquer\n",
+    "\n",
+    "Transform the shape/domain of the problem such that the problem is easier to solve, and then using another approach (brute force, divide and conquer, etc...)\n",
+    "\n",
+    "Consider the problem of looking for duplicate entries in an array. \n",
+    " * Brute Force approach \n",
+    "   * Loop over every entry in the array, checking all other entries in the array if any of them are the same value.\n",
+    "   * $\\mathcal{O}(n^2)$\n",
+    "   \n",
+    "But if the array is transformed such that it is now sorted in an order (alphabetical/ascending)\n",
+    "* Transform and conquer approach\n",
+    "  * Loop over every entry in the array, checking if either of it's neighbors have the same value as the entry.\n",
+    "  * $\\mathcal{O}(n)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transform and Conquer Example: Convoluton theorem\n",
+    "\n",
+    "The convolution of two functions $f(x),\\ g(x)$ is given by \n",
+    "$$ f(x) * g(x) $$\n",
+    "<img src=\"http://i.imgur.com/I5EBFL7.gif\" width=\"500\" heigth=\"500\" \\>\n",
+    "\n",
+    "The convolution theorem holds that for certain functions the convolution can be found by taking the product of the fourier transform of the two functions. \n",
+    "\n",
+    "$$ f(x) * g(x) = \\mathcal{F}^-1 [\\mathcal{F}[f(x)]\\mathcal{F}[g(x)]] $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Convolution theorem speedup\n",
+    "<img src=\"http://i.imgur.com/Vfz1xlT.png\" width=\"500\" heigth=\"500\" \\>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# In summary\n",
+    "\n",
+    "We looked at \n",
+    "\n",
+    "* Brute Force Approaches\n",
+    "* Divide and Conquer approaches\n",
+    "  * Parallelizable\n",
+    "* Decrease and conquer approaches\n",
+    "  * Not parallelizable\n",
+    "* Greedy approaches to optimization\n",
+    "* Transform and conquer approaches\n",
+    "\n",
+    "We've examined/implemented examples of each of these approaches and compared them\n",
+    "* Big-O notation ($\\mathcal{O}()$)\n",
+    "* Growth rates\n",
+    "* Wall Clock time "
+   ]
   }
  ],
  "metadata": {
